added new models

--- a/layouts/adminBoilerplate.ejs
+++ b/layouts/adminBoilerplate.ejs
@@ -50,6 +50,9 @@
                 <a href="/admin/email">Send Email</a>
             </div>
             <div class="nav-element">
+                <a href="/admin/resources">Resources</a>
+            </div>
+            <div class="nav-element">
                 <a href="/admin/semesters">Semesters</a>
             </div>
             <div class="nav-element">
