--- a/layouts/facultyBoilerplate.ejs
+++ b/layouts/facultyBoilerplate.ejs
@@ -39,6 +39,9 @@
                 <a href="/faculty/download">Download</a>
             </div>
             <div class="nav-element">
+                <a href="/faculty/resources">Resources</a>
+            </div>
+            <div class="nav-element">
                 <a href="/faculty/logout">Logout</a>
             </div>
         </div>
