--- a/layouts/studentBoilerplate.ejs
+++ b/layouts/studentBoilerplate.ejs
@@ -35,6 +35,9 @@
                 <a href="/student/download">Download</a>
             </div>
             <div class="nav-element">
+                <a href="/student/resources">Resources</a>
+            </div>
+            <div class="nav-element">
                 <a href="/student/logout">Logout</a>
             </div>
         </div>
