--- a/views/admin/academicYears/index.ejs
+++ b/views/admin/academicYears/index.ejs
@@ -1,20 +1,45 @@
 <% layout("../layouts/adminBoilerplate") -%>
 <body>
-    <div class="container mt-5">
-        <h1 class="mb-4">Academic Years</h1>
-        <a href="/admin/academic-years/new" class="btn btn-success mb-3">Create New Academic Year</a>
-        <ul class="list-group">
-            <% academicYears.forEach(year => { %>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <span><%= year.name %></span>
-                    <div>
-                        <a href="/admin/academic-years/<%= year._id %>/edit" class="btn btn-info btn-sm mr-2">Edit</a>
-                        <form action="/admin/academic-years/<%= year._id %>?_method=DELETE" method="POST" class="d-inline">
-                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                        </form>
-                    </div>
-                </li>
-            <% }) %>
-        </ul>
+  <div class="container mt-5">
+    <h1 class="mb-4">Academic Years</h1>
+    <a href="/admin/academic-years/new" class="btn btn-success mb-3">Create New Academic Year</a>
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>Academic Year</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Semesters</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% academicYears.forEach(year => { %>
+            <tr>
+              <td><%= year.name %></td>
+              <td><%= year.startDate.toDateString() %></td>
+              <td><%= year.endDate.toDateString() %></td>
+              <td>
+                <ul class="list-unstyled mb-0">
+                  <% year.semesters.forEach(sem => { %>
+                    <li>
+                      <strong><%= sem.sem.name %></strong>: 
+                      <%= sem.startDate.toDateString() %> - <%= sem.endDate.toDateString() %>
+                    </li>
+                  <% }) %>
+                </ul>
+              </td>
+              <td>
+                <a href="/admin/academic-years/<%= year._id %>/edit" class="btn btn-info btn-sm">Edit</a>
+                <form action="/admin/academic-years/<%= year._id %>?_method=DELETE" method="POST" class="d-inline">
+                  <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                </form>
+              </td>
+            </tr>
+          <% }) %>
+        </tbody>
+      </table>
     </div>
+  </div>
 </body>
